--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-babel": "^6.1.1",
     "gulp-cache": "^0.4.2",
     "gulp-clean": "^0.3.2",
+    "gulp-copy": "0.0.2",
     "gulp-cssnano": "^2.0.0",
     "gulp-declare": "^0.3.0",
     "gulp-define-module": "^0.1.4",
