--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,7 @@
   "name": "ritz078-github-io",
   "private": true,
   "dependencies": {
-    "handlebars": "^2.x",
-    "scrollreveal": "^3.1.4",
-    "font-awesome": "^4.6.3"
+    "handlebars": "^2.x"
   },
   "devDependencies": {
     "chai": "^3.5.0",
