--- a/package.json
+++ b/package.json
@@ -22,15 +22,18 @@
     "gulp-handlebars": "^4.0.0",
     "gulp-htmlmin": "^1.3.0",
     "gulp-if": "^2.0.0",
+    "gulp-image-resize": "^0.9.0",
     "gulp-imagemin": "^2.2.1",
     "gulp-load-plugins": "^0.10.0",
     "gulp-plumber": "^1.0.1",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^2.0.0",
     "gulp-size": "^1.2.1",
     "gulp-sourcemaps": "^1.5.0",
     "gulp-subtree": "^0.1.0",
     "gulp-uglify": "^1.1.0",
     "gulp-useref": "^3.0.0",
+    "gulp.spritesmith": "^6.2.1",
     "main-bower-files": "^2.5.0",
     "wiredep": "^2.2.2"
   },
