--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next",
     "start": "next start",
-    "build": "next build && next export",
+    "build": "next build && next export -o personal-web",
+    "deploy": "npm run build && cd personal-web && now",
     "format": "prettier --write 'pages/*.js'"
   },
   "author": "",
