--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "lru-cache": "^4.1.1",
     "material-design-lite": "^1.3.0",
     "next": "^3.2.2",
-    "plyr": "^2.0.13",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^2.0.6",
     "preact": "^8.2.5",
@@ -40,6 +39,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.24.1",
     "cssnano": "^3.10.0",
-    "prettier": "^1.6.1"
+    "prettier": "^1.6.1",
+    "sw-precache-webpack-plugin": "^0.11.4"
   }
 }
