--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babili-webpack-plugin": "^0.1.2",
     "is-in-browser": "^1.1.3",
     "material-design-lite": "^1.3.0",
-    "next": "^4.2.3",
+    "next": "3.2.3",
     "preact": "^8.2.7",
     "preact-compat": "^3.18.0",
     "react": "^16.2.0",
