--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next start",
     "build": "next build && next export -o personal-web && cp ./.next/service-worker.js ./personal-web/service-worker.js",
     "deploy": "npm run build && cd personal-web && now",
-    "format": "prettier --write 'pages/*.js' 'components/*.js'"
+    "format": "prettier --write 'pages/*.js' 'components/*.js'",
+    "precommit": "node ./pdf.js && git add static/*"
   },
   "author": "",
   "license": "ISC",
@@ -17,26 +18,28 @@
     "babili-webpack-plugin": "^0.1.2",
     "is-in-browser": "^1.1.3",
     "material-design-lite": "^1.3.0",
-    "next": "3.2.3",
+    "next": "5.0.0",
     "preact": "^8.2.7",
     "preact-compat": "^3.18.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-github-corner": "^2.1.0",
     "react-lazy-card": "^0.1.8",
-    "react-modal": "^3.1.11",
+    "react-modal": "^3.1.12",
     "react-progressive-image-loading": "^3.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.5",
-    "babel-plugin-module-resolver": "^2.7.1",
+    "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-wrap-in-js": "^1.1.1",
     "babel-preset-es2015": "^6.24.1",
     "cssnano": "^3.10.0",
     "glob": "^7.1.2",
+    "husky": "^0.14.3",
     "postcss-easy-import": "^3.0.0",
-    "postcss-loader": "^2.0.10",
+    "postcss-loader": "^2.1.0",
     "prettier": "^1.10.2",
+    "puppeteer": "^1.0.0",
     "raw-loader": "^0.5.1",
     "sw-precache-webpack-plugin": "^0.11.4"
   }
