--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "babili-webpack-plugin": "^0.1.2",
     "is-in-browser": "^1.1.3",
     "material-design-lite": "^1.3.0",
-    "next": "5.0.0",
+    "next": "5.0.1-canary.16",
     "preact": "^8.2.7",
     "preact-compat": "^3.18.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-github-corner": "^2.1.0",
     "react-lazy-card": "^0.1.8",
-    "react-modal": "^3.3.1",
+    "react-modal": "^3.3.2",
     "react-progressive-image-loading": "^3.0.2"
   },
   "devDependencies": {
@@ -37,9 +37,9 @@
     "glob": "^7.1.2",
     "husky": "^0.14.3",
     "postcss-easy-import": "^3.0.0",
-    "postcss-loader": "^2.1.1",
+    "postcss-loader": "^2.1.2",
     "prettier": "^1.11.1",
-    "puppeteer": "^1.1.1",
+    "puppeteer": "^1.2.0",
     "raw-loader": "^0.5.1",
     "sw-precache-webpack-plugin": "^0.11.5"
   }
