--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
     "cssnano": "^3.10.0",
     "glob": "^7.1.2",
     "husky": "^1.1.2",
+    "next-offline": "^3.0.2",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^2.1.2",
     "prettier": "^1.11.1",
     "puppeteer": "^1.2.0",
     "raw-loader": "^0.5.1",
-    "serve": "^10.0.2",
-    "sw-precache-webpack-plugin": "^0.11.5"
+    "serve": "^10.0.2"
   }
 }
