--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next",
-    "start": "serve",
+    "start": "next start",
     "build": "next build && next export -o personal-web",
     "deploy": "npm run build && cd personal-web && now",
     "format": "prettier --write 'pages/*.js' 'components/*.js'",
@@ -16,7 +16,6 @@
   "license": "ISC",
   "dependencies": {
     "is-in-browser": "^1.1.3",
-    "material-design-lite": "^1.3.0",
     "next": "^7.0.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -26,19 +25,18 @@
     "react-progressive-image-loading": "^3.0.2"
   },
   "devDependencies": {
-    "autoprefixer": "^8.1.0",
+    "autoprefixer": "^9.2.1",
     "babel-plugin-module-resolver": "^3.1.0",
     "babel-plugin-wrap-in-js": "^1.1.1",
     "babel-preset-es2015": "^6.24.1",
-    "cssnano": "^3.10.0",
+    "cssnano": "^4.1.4",
     "glob": "^7.1.2",
     "husky": "^1.1.2",
     "next-offline": "^3.0.2",
     "postcss-easy-import": "^3.0.0",
-    "postcss-loader": "^2.1.2",
+    "postcss-loader": "^3.0.0",
     "prettier": "^1.11.1",
     "puppeteer": "^1.2.0",
-    "raw-loader": "^0.5.1",
-    "serve": "^10.0.2"
+    "raw-loader": "^0.5.1"
   }
 }
