--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next",
     "start": "next start",
-    "build": "next build && next export -o personal-web",
-    "deploy": "npm run build && cd personal-web && now",
+    "build": "next build",
     "format": "prettier --write 'pages/*.js' 'components/*.js'",
     "pdf": "node ./pdf.js && git add static/*"
   },
@@ -28,9 +27,7 @@
     "autoprefixer": "^9.2.1",
     "babel-plugin-module-resolver": "^3.1.0",
     "babel-plugin-wrap-in-js": "^1.1.1",
-    "babel-preset-es2015": "^6.24.1",
     "cssnano": "^4.1.4",
-    "glob": "^7.1.2",
     "husky": "^1.1.2",
     "next-offline": "^3.0.2",
     "postcss-easy-import": "^3.0.0",
