--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "next build",
     "export": "next export",
     "format": "prettier --write 'pages/*.js' 'components/*.js'",
-    "pdf": "node ./pdf.js && git add static/*"
+    "pdf": "node ./pdf.js && git add static/*",
+    "now-build": "next build && next export -o dist"
   },
   "author": "",
   "license": "ISC",
@@ -24,6 +25,7 @@
     "react-progressive-image-loading": "^3.0.2"
   },
   "devDependencies": {
+    "@now/static-build": "^0.5.6",
     "autoprefixer": "^9.2.1",
     "babel-plugin-module-resolver": "^3.1.0",
     "babel-plugin-wrap-in-js": "^1.1.1",
