--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
   "license": "ISC",
   "dependencies": {
     "is-in-browser": "^1.1.3",
-    "next": "^8.1.0",
+    "next": "^9.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-github-corner": "^2.1.0",
     "react-lazy-card": "^0.1.8",
-    "react-modal": "^3.8.1",
+    "react-modal": "^3.9.1",
     "react-progressive-image-loading": "^3.0.2"
   },
   "devDependencies": {
     "@now/static-build": "^0.5.9",
+    "@zeit/next-css": "^1.0.1",
     "autoprefixer": "^9.6.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-plugin-wrap-in-js": "^1.1.1",
@@ -35,7 +36,7 @@
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^3.0.0",
     "prettier": "^1.18.2",
-    "puppeteer": "^1.18.0",
+    "puppeteer": "^1.19.0",
     "raw-loader": "^0.5.1"
   }
 }
