--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "is-in-browser": "^1.1.3",
-    "next": "^9.0.2",
+    "next": "8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-github-corner": "^2.1.0",
