--- a/package.json
+++ b/package.json
@@ -9,34 +9,34 @@
     "build": "next build",
     "export": "next export",
     "format": "prettier --write 'pages/*.js' 'components/*.js'",
-    "pdf": "node ./pdf.js && git add static/*",
+    "pdf": "node ./pdf.js && git add public/static/*",
     "now-build": "next build && next export -o dist"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "is-in-browser": "^1.1.3",
-    "next": "8.1.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "next": "9.1.7",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-github-corner": "^2.1.0",
     "react-lazy-card": "^0.1.8",
-    "react-modal": "^3.9.1",
+    "react-modal": "^3.11.1",
     "react-progressive-image-loading": "^3.0.2"
   },
   "devDependencies": {
     "@now/static-build": "^0.5.9",
     "@zeit/next-css": "^1.0.1",
-    "autoprefixer": "^9.6.0",
-    "babel-plugin-module-resolver": "^3.2.0",
+    "autoprefixer": "^9.7.3",
+    "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-wrap-in-js": "^1.1.1",
     "cssnano": "^4.1.10",
-    "husky": "^1.1.2",
-    "next-offline": "^3.0.2",
+    "husky": "^3.1.0",
+    "next-offline": "^4.0.6",
     "postcss-easy-import": "^3.0.0",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.18.2",
-    "puppeteer": "^1.19.0",
-    "raw-loader": "^0.5.1"
+    "prettier": "^1.19.1",
+    "puppeteer": "^2.0.0",
+    "raw-loader": "^4.0.0"
   }
 }
