--- a/package.json
+++ b/package.json
@@ -15,27 +15,20 @@
   "license": "ISC",
   "dependencies": {
     "is-in-browser": "^1.1.3",
-    "next": "9.1.7",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-github-corner": "^2.1.0",
+    "next": "10.0.4",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-github-corner": "^2.5.0",
     "react-lazy-card": "^0.1.8",
-    "react-modal": "^3.11.1",
+    "react-modal": "^3.12.1",
     "react-progressive-image-loading": "^3.0.2"
   },
   "devDependencies": {
-    "@now/static-build": "^0.5.9",
-    "@zeit/next-css": "^1.0.1",
-    "autoprefixer": "^9.7.3",
     "babel-plugin-module-resolver": "^4.0.0",
     "babel-plugin-wrap-in-js": "^1.1.1",
-    "cssnano": "^4.1.10",
     "husky": "^3.1.0",
-    "next-offline": "^4.0.6",
-    "postcss-easy-import": "^3.0.0",
-    "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
     "puppeteer": "^2.0.0",
-    "raw-loader": "^4.0.0"
+    "sass": "^1.32.0"
   }
 }
